@@ -470,6 +470,15 @@ class SimpleFunctionTests(unittest.TestCase):
         self.assertRaises(tb.TimeoutError, tb.do_with_timeout,
                           0.5, testfunc, 5)
 
+    def test_timeout_check_call(self):
+        """Make sure check_call replacement handles timout"""
+        def testfunc(x):
+            time.sleep(1)
+            return x + 1
+        self.assertEqual(0, tb.timeout_check_call(10.0, 'sleep 2', shell=True))
+        self.assertRaises(tb.TimeoutError, tb.timeout_check_call,
+                          1.0, 'sleep 5', shell=True)
+
 
 class TBTimeFunctionTests(unittest.TestCase):
     def setUp(self):
